--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,7 +11,7 @@
   height: 100%;
 
   opacity: 1;
-}
+} */
 
 header {
   top: 0px;
