--- a/src/components/prefer-container/PreferContainer.css
+++ b/src/components/prefer-container/PreferContainer.css
@@ -1,3 +1,20 @@
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.body {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+
+  opacity: 1;
+} */
+
+
+
 .prefer-container {
     display: flex;
   
