--- a/src/components/process-order-yes-container/ProcessOrderYes.css
+++ b/src/components/process-order-yes-container/ProcessOrderYes.css
@@ -1,3 +1,18 @@
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.body {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+} */
+
+
 .process-order-container {
   width: 100%;
   display: flex;
