--- a/src/components/subtotal-container/SubTotalContainer.css
+++ b/src/components/subtotal-container/SubTotalContainer.css
@@ -1,4 +1,16 @@
- 
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.body {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+} */
   .subtotal-container {
     display: flex;
     flex-flow: row nowrap;
